# journalctl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: security-tests.yml
data/: .gitignore
data/knowledge/: user-profile.md
deployment/: Dockerfile  README.md  backfill_encrypt_conversations.py  backfill_to_tsvector.py  cleanup_encrypted_xml_spill.py  entrypoint.sh  grants.sql  init.sql  nginx.conf  requirements-memory.txt  restore-db.sh  scaffold_self_host.py  verify-db-invariants.sh
deployment/scripts/: backfill_encrypt_conversations.py  backfill_to_tsvector.py  cleanup_encrypted_xml_spill.py  restore-db.sh  verify-db-invariants.sh
docs/: architecture.md  deployment.md  philosophy.md  taxonomy-guide.md  tools-reference.md
gubbi/: audit.py  config.py  main.py
gubbi/alembic/: env.py
gubbi/alembic/versions/: 20260419_0001_baseline.py  20260419_0005_enable_rls.py  20260419_0008_drop_plaintext_columns.py  20260421_0009_grant_admin_journal_app.py  20260429_0016_audit_log_content_hash_dedup.py  (+4 more)
gubbi/api/: __init__.py
gubbi/auth/: __init__.py
gubbi/core/: audit_decorator.py  cipher_guard.py  context.py  crypto.py  logger.py  scope.py  validation.py
gubbi/extraction/: context.py  service.py  worker.py
gubbi/middleware/: __init__.py  auth.py  correlation.py  origin.py  path.py
gubbi/models/: conversation.py  journal.py
gubbi/oauth/: crypto.py  forms.py  provider.py  router.py  selfhost.py  storage.py  templates.py  wellknown.py
gubbi/scripts/: rotate_encryption_key.py
gubbi/storage/: embedding_service.py  knowledge.py  pg_setup.py  schema.sql
gubbi/telemetry/: __init__.py  attrs.py  logging.py  metrics.py  spans.py
gubbi/tools/: _response_size.py  admin.py  context.py  conversations.py  entries.py  errors.py  registry.py  search.py  topics.py
gubbi/users/: bootstrap.py
journalctl/: audit.py  auth.py  config.py  import_tools.py  main.py
journalctl/alembic/: env.py
journalctl/api/: __init__.py
journalctl/auth/: hydra.py
journalctl/core/: audit_decorator.py  auth_context.py  cipher_guard.py  context.py  crypto.py  db_context.py  logger.py  scope.py  validation.py
journalctl/extraction/: context.py  health.py  service.py  worker.py
journalctl/memory/: bootstrap.py  client.py  protocol.py  setup.py
journalctl/middleware/: __init__.py  auth.py  correlation.py
journalctl/models/: conversation.py  entry.py  journal.py  search.py
journalctl/oauth/: constants.py  crypto.py  disabled.py  forms.py  hash_password.py  login.py  provider.py  router.py  selfhost.py  setup.py  storage.py  templates.py  wellknown.py
journalctl/scripts/: backfill_encrypt.py  migrate_from_markdown.py  rotate_encryption_key.py
journalctl/storage/: constants.py  conversations.py  database.py  embedding_service.py  exceptions.py  index.py  knowledge.py  markdown.py  pg_setup.py  schema.sql  search_index.py
journalctl/telemetry/: __init__.py  attrs.py  logging.py  metrics.py  spans.py
journalctl/tools/: _response_size.py  admin.py  constants.py  context.py  conversations.py  entries.py  memory.py  registry.py  search.py  topics.py
journalctl/users/: bootstrap.py
scripts/: daily_sync.sh  generate_timeline.py
tests/: conftest.py  test_database.py  test_index.py  test_markdown.py  test_memory_setup.py  test_memory_tools.py  test_oauth_flow.py  test_oauth_storage.py  test_otel.py  test_tools.py  test_validation.py
tests/e2e/: test_mcp_oauth_flow.py  test_tool_isolation.py  test_tools.py
tests/fixtures/: tenants.py
tests/integration/: conftest.py  test_audit_immutability.py  test_audit_log_cross_attribution.py  test_audit_log_target_kind.py  test_conversation_upsert.py  test_database.py  test_encryption_contract.py  test_encryption_correctness.py  test_entries_encryption.py  test_extraction_summary_audit.py  test_forged_user_id_smoke.py  test_grants_contract.py  test_hydra_oauth_flow.py  test_ingest_endpoint.py  test_migration_0004_mode3_noop.py  test_migration_0004_pure_schema.py  test_migration_0011_cleanup.py  test_mode3_fresh_deploy.py  test_oauth_flow.py  test_oauth_metadata.py  test_oauth_provider.py  test_oauth_storage.py  test_pg_setup.py  test_repo_inserts_under_rls.py  test_rls_isolation.py  test_rls_users.py  test_rotate_encryption_key.py  test_search_index.py
tests/unit/: test_alembic_env.py  test_anthropic_retry.py  test_api_auth_dep.py  test_audit.py  test_audit_decorator.py  test_audit_invariant.py  test_auth_middleware.py  test_call_with_operator_scopes.py  test_check_env_contract.py  test_cipher_guard.py  test_client_ip_trust_flag.py  test_constants.py  test_crypto.py  test_db_context.py  test_embedding_service.py  test_extract_conversation_job.py  test_extraction.py  test_extraction_sse.py  test_gateway_signature_verifier.py  test_gubbi_action_drift.py  test_health_bind_localhost.py  test_hydra_introspector.py  test_ingest_dedupe.py  test_ingest_validation.py  test_journal_search_decryption_failure.py  test_m234_low_bundle.py  test_memory_setup.py  test_migration_0004_static.py  test_monkey_patch_assert.py  test_oauth_backfill_limit.py  test_oauth_disabled.py  test_oauth_router.py  test_oauth_selfhost.py  test_oauth_wellknown.py  test_pool_acquire_guard.py  test_provision_operator.py  test_response_size.py  test_response_size_invariant.py  test_rotate_encryption_key.py  test_scaffold_self_host.py  (+8 more)
tools/: check_env_contract.py
(+44 files in other folders)
