[tool.poetry]
name = "journalctl"
version = "0.2.0"
description = "Personal journal MCP server - append-only historical record with semantic memory"
authors = ["madhukar01 <mholla8@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.0"
structlog = "^24.4.0"
gunicorn = "^23.0.0"
mcp = "^1.26.0"
python-frontmatter = "^1.1.0"
filelock = "^3.16.0"
bcrypt = "^5.0.0"
# mcp-memory-service runtime deps (installed --no-deps in Docker to skip torch/sentence-transformers).
# This list is the full mcp-memory-service dependency set minus:
#   torch, sentence-transformers  — too heavy (~2.7 GB), ONNX path used instead
#   build                         — build-time only, not needed at runtime
#   mcp, fastapi, uvicorn         — already above
#   tokenizers, python-dotenv, chardet — already above
onnxruntime = ">=1.14.1"
tokenizers = ">=0.22.2"
sqlite-vec = ">=0.1.0"
numpy = ">=1.24.0"
python-dotenv = ">=1.0.0"
chardet = ">=5.0.0,<6.0.0"
requests = ">=2.32.4"
aiosqlite = ">=0.20.0"
aiohttp = ">=3.13.3"
aiofiles = ">=23.2.1"
python-multipart = ">=0.0.22"
sse-starlette = ">=2.1.0"
psutil = ">=5.9.0"
zeroconf = ">=0.130.0"
pypdf = ">=6.9.1"
click = ">=8.0.0"
httpx = ">=0.24.0"
apscheduler = ">=3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pre-commit = "^3.5.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011", "S105", "S106", "S107"]
"scripts/**/*.py" = ["T201", "S112"]

[tool.ruff.lint.isort]
known-first-party = ["journalctl"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
