[tool.poetry]
name = "journalctl"
version = "0.2.0"
description = "Personal journal MCP server - append-only historical record with semantic memory"
authors = ["madhukar01 <mholla8@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.0"
structlog = "^24.4.0"
gunicorn = "^23.0.0"
mcp = "^1.26.0"
python-frontmatter = "^1.1.0"
filelock = "^3.16.0"
bcrypt = "^5.0.0"
# PostgreSQL async driver + pgvector extension codec
asyncpg = "^0.30.0"
pgvector = "^0.3.6"
# ONNX embeddings (all-MiniLM-L6-v2, CPU-only, ~80MB)
onnxruntime = ">=1.14.1"
tokenizers = ">=0.22.2"
numpy = ">=1.24.0"
python-dotenv = ">=1.0.0"
chardet = ">=5.0.0,<6.0.0"
requests = ">=2.33.0"
python-multipart = ">=0.0.22"
sse-starlette = ">=2.1.0"
click = ">=8.0.0"
httpx = ">=0.24.0"
authlib = ">=1.6.9"
PyJWT = {version = ">=2.12.0", extras = ["crypto"]}
cryptography = ">=46.0.6"
# Database migrations
alembic = "^1.14.0"
sqlalchemy = "^2.0.0"
psycopg = {version = "^3.2.0", extras = ["binary"]}
cachetools = ">=5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pre-commit = "^3.5.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-requests = ">=2.32.0"
hypothesis = "^6.152.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN401", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011", "S105", "S106", "S107", "ANN", "E501"]
"journalctl/storage/database.py" = ["S101", "E501"]
"journalctl/storage/conversations.py" = ["E501"]
"journalctl/storage/embedding_service.py" = ["ANN"]
"journalctl/alembic/versions/20260419_0004_add_user_id_to_tenants.py" = ["E501"]
"journalctl-cloud/journalctl_cloud/webhooks/kratos.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["journalctl"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: slower tests (e.g. large-input performance checks)",
    "hosted_live: requires live dev stack (auth-dev.meepolabs.com + identity-dev.meepolabs.com + journal.meepolabs.com); enable with JOURNAL_LIVE_STACK=1",
    "unit: fast, isolated unit tests with no external dependencies",
    "integration: tests that exercise multiple components or require a running service",
]
